------------------
- atmxl: Export / import mimetype of Archetypes IObjectFields so the right 
  content type will be set in Plone 4. Ported from quintagroup.transmogrifier.
  [csenger]

- atxml: Encode/decode strings with control characters that breaks common xml 
  parsers in base64. This can be turned off by calling the marshaller with
  'encode_with_ctrlchars=False'
  [csenger]

- Deprecationfix: Use DateTime.ISO8601() instead of DateTime.ISO
  [tomster]

2.0b1 - 2009-12-27
------------------

- Removed BBB code for guess_content_type and fixed package dependencies.
  [hannosch]

2.0a1 - 2009-11-13
------------------

- Replaced a simple logging call with the standard logging module.
  [hannosch]

- Changed the config.py check for ElementTree to accept xml.etree.
  [hannosch]

- Get tests to work with `xml.etree` and Plone trunk. We have to use the ATCT
  test cases as a base to get the expected content types.
  [hannosch]

- Downgrade warning about missing `libxml2-python` to debug level.
  [hannosch]

- Avoid a test dependency on quick installer.
  [hannosch]

- Updated package metadata and cleaned up a bit.
  [hannosch]

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- Made test runs that require libxml2 dependent on the availability of it.
  [hannosch]

- Made the dependency on elementree conditional on the Python version. For
  Python 2.5 and later, we use the xml.etree modules.
  [hannosch]

- Purged old Zope 2 Interface interfaces for Zope 2.12 compatibility.
  [elro]

1.2.2 - unreleased
------------------

1.2.1 - 2009-05-29
------------------

- Register atxml and namespaces even if libxml2 isn't present, but test for
  elementtree.
  [csenger]

1.2.0 - 2008-09-30
------------------

- Intial egg release.

1.0.0 - 2007-11-07
------------------

- Made demarshall of SchemaAttributes more verbose. Now it raises its
  own Exception with information on which attribute and value it fails.
  [jensens]
